migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 1, db_mig_count: 0, latest_migration_file_basename_normalized: migration_init, latest_db_migration_meta_basename_normalized: migration_initreversible: false, mode: strict. Line: 460.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
cb3cf47d9f23945d54a3cab684b8c54dd6105c859cd7a41ecfbf1251a5a50ef5
