migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 1, db_mig_count: 1, latest_migration_file_basename_normalized: migration_init, latest_db_migration_meta_basename_normalized: migration_initreversible: false, mode: strict. Line: 474.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
1a02a35ddaca67107b7e6df3ad80da3e489de8eaea48f91c64840641a64d6066
