migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 12, db_mig_count: 12, latest_migration_file_basename_normalized: migration_12_gen_after_init, latest_db_migration_meta_basename_normalized: migration_12_gen_after_initreversible: false, mode: lax. Line: 797.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
ab5b7fce0bf59b89bb156a46b942761b430ab86d2f7fba9b8d71f49ce1b60ab4
