migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 12, db_mig_count: 12, latest_migration_file_basename_normalized: migration_gen_10_after_init, latest_db_migration_meta_basename_normalized: migration_gen_10_after_initreversible: false, mode: strict. Line: 652.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
80e989c79bce5e0ea39b54816d1433938b07e723864809d92c547789d7cdd5bc
