migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 12, db_mig_count: 5, latest_migration_file_basename_normalized: migration_gen_10_after_init, latest_db_migration_meta_basename_normalized: migration_gen_3_after_initreversible: false, mode: lax. Line: 680.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
1893d0eddc973c4be5b63ba705b2c6d821c8eb9691ed6077825e832ffe66ac03
