migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 12, db_mig_count: 7, latest_migration_file_basename_normalized: migration_gen_10_after_init, latest_db_migration_meta_basename_normalized: migration_gen_5_after_initreversible: false, mode: lax. Line: 708.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
8a202d22d8e1b72137935673b0dcdebe4751aa5d5e8d47df964f80af8fe7009b
