migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 12, db_mig_count: 9, latest_migration_file_basename_normalized: migration_12_gen_after_init, latest_db_migration_meta_basename_normalized: migration_9_gen_after_initreversible: false, mode: strict. Line: 995.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
47a85a19e18d3de3a56e82ad5aafc6879882a5b4bf3c090c99dc2dbe4d1b303a
