migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 24, db_mig_count: 12, latest_migration_file_basename_normalized: migration_12_gen_after_init, latest_db_migration_meta_basename_normalized: migration_12_gen_after_initreversible: true, mode: lax. Line: 598.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
1357f71a3419993b68c870a15260b3e87d817aacd2c6d10f60bb6f48619f22e5
