migrator-tests/tests/snapshots/up__Checksum: mig_files_count: 24, db_mig_count: 12, latest_migration_file_basename_normalized: migration_12_gen_after_init, latest_db_migration_meta_basename_normalized: migration_12_gen_after_initreversible: true, mode: strict. Line: 598.snap
---
source: migrator-tests/tests/up.rs
expression: migrations_contents.as_checksum().unwrap()
---
b8141a607c9c31ec6c0340776058120aa92d4e6b7630b5c9a999053f011dc182
